Update page - video-section.json a2ee88867dad217c2eb4e6df2441281381d4eb3a

--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir el riesgo</h1>
           
-            <p class="small-text">Última actualización&nbsp;16 de marzo de 2021 a las 2:26 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 4:52 p. m.</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Escuelas: actualizado el 22 de febrero de 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Escuelas: actualizado el 20 de marzo de 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>California actualizó la guía y el marco para reabrir las escuelas de jardín de niños a doceavo grado (K-12) para el aprendizaje en persona para el año escolar 2020-2021. Obtenga más información en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía y el marco para reabrir las escuelas K-12</a>. Consulte las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">preguntas y respuestas</a> sobre la guía y el marco para reabrir las escuelas K-12.</p>
-<p> Las escuelas también deben seguir la <a href="/es/industry-guidance/#cohort-guidance">guía relacionada con las cohortes</a> de niños y jóvenes. Para deportes juveniles patrocinados por las escuelas, siga la <a title="guía para deportes juveniles" href="/es/industry-guidance/#youthsports-guidance">guía para deportes juveniles</a>.</p>
+            <p>California actualizó la guía y el marco para reabrir las escuelas de jardín de niños a doceavo grado (K-12) para el aprendizaje en persona para el año escolar 2020-2021. Obtenga más información en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">guía y el marco para reabrir las escuelas K-12</a>. Consulte las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">preguntas y respuestas</a> sobre la guía y el marco para reabrir las escuelas K-12.</p>
+<p>Para deportes juveniles patrocinados por las escuelas, siga la <a title="guía para deportes juveniles" href="/es/industry-guidance/#youthsports-guidance">guía para deportes juveniles</a>.</p>
 <p>Visite <a href="https://schools.covid19.ca.gov/">Escuelas seguras para todos</a> para obtener la información más reciente y recursos sobre COVID-19 y las escuelas.</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Siga esta <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> tanto para interiores como para exteriores. Esta guía entrará en vigor el 26 de febrero de 2021. Muestra qué deportes se pueden volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión de COVID-19.</p>
+            <p>Siga esta <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> tanto para interiores como para exteriores.Muestra qué deportes se pueden volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión de COVID-19. También incluye limitaciones para competencias y torneos.</p>
 <p>Esta guía se aplica a todos los deportes organizados para jóvenes, incluidos:</p>
 <ul><li>programas de escuelas K-12</li><li>programas recreativos patrocinados por la comunidad</li><li>clubes y ligas privados</li></ul>
 <p>Esta guía también se aplica a los adultos que practican deportes recreativos. No se aplica a los deportes universitarios o profesionales. </p>
-<p>A partir del 25 de enero de 2021, se pueden reanudar las competencias de algunos deportes.</p>
-<ul><li>Las competencias deben ser solo entre dos equipos.</li><li>No se permiten torneos fuera del estado.</li></ul>
-<p>Encuentre todos los detalles en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a> más reciente, que incluye las limitaciones para las competencias. </p>
-<p>El Departamento de Salud Pública de California también publicó las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">preguntas y respuestas</a> sobre los deportes para jóvenes y adultos.</p>
+<p>Encuentre más información en las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">preguntas y respuestas</a> sobre los deportes para jóvenes del Departamento de Salud Pública de California.</p>
+<p><strong>Competencias</strong></p>
+<p>Se pueden reanudar las competencias de algunos deportes. Estas deben ser solo entre dos equipos. Un equipo solo puede participar en un juego por día. No se permiten torneos fuera del estado. Puede haber competencias cuando ambos equipos están ubicados:</p>
+<ul><li>en el mismo condado y el deporte está permitido en el nivel actual de ese condado</li><li>en condados limítrofes y el deporte está permitido en los niveles actuales de ambos condados</li></ul>
+<p>La competencia de varios equipos está permitida para deportes en los que es habitual que haya competidores individuales de varios equipos, como por ejemplo:</p>
+<ul><li>atletismo</li><li>a campo traviesa</li><li>golf</li><li>esquí y snowboard</li><li>tenis</li><li>natación, buceo y surf</li><li>ciclismo</li><li>eventos ecuestres</li></ul>
+<p>El departamento de salud local donde se lleva a cabo el evento y cada uno de los departamentos de salud locales desde donde viajan los equipos deben autorizar la competencia.</p>
+<p>Consulte los detalles completos en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a>.</p>
+<p><strong>Equipos que siguen los requisitos deportivos universitarios</strong></p>
+<p>Si un equipo sigue los requisitos más estrictos establecidos para los equipos universitarios, puede regresar a la competencia en cualquier momento para cualquier deporte, incluso en interiores. Estos requisitos incluyen:</p>
+<ul><li>requisitos de pruebas rigurosos para cada competencia</li><li>protocolos de rastreo de contactos</li><li>coordinación con las autoridades sanitarias locales</li></ul>
+<p>Encuentre los detalles completos sobre estos requisitos en la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">guía para deportes recreativos para jóvenes y adultos</a>.</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
