--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya para mabawasan ang panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 16, 2021 sa 2:26 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 4:52 PM</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Mga paaralan – na-update noong Pebrero 22, 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Mga Paaralan – na-update noong Marso 20, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Na-update ng California ang gabay at framework para sa muling pagbubukas ng mga K-12 na paaralan para sa in-person na pag-aaral para sa taong panuruan 2020-2021. Matuto pa sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">Framework at gabay sa muling pagbubukas ng mga paaralang K-12</a>. Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">mga tanong at sagot</a> tungkol sa framework at gabay sa muling pagbubukas ng mga paaralang K-12.</p>
-<p> Dapat ding sumunod ang mga paaralan sa <a href="/tl/industry-guidance/#cohort-guidance">gabay na nauugnay sa mga grupo</a> ng mga bata at kabataan. Para sa mga sponsored ng paaralan na youth sports, sundin ang <a title="gabay para sa youth sports" href="/tl/industry-guidance/#youthsports-guidance">gabay para sa youth sports</a>.</p>
+            <p>Na-update ng California ang gabay at framework para sa muling pagbubukas ng mga K-12 na paaralan para sa in-person na pag-aaral para sa taong panuruan 2020-2021. Matuto pa sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">Framework at gabay sa muling pagbubukas ng mga paaralang K-12</a>. Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">mga tanong at sagot</a> tungkol sa framework at gabay sa muling pagbubukas ng mga paaralang K-12.</p>
+<p>Para sa mga sponsored ng paaralan na youth sports, sundin ang <a title="gabay para sa youth sports" href="/tl/industry-guidance/#youthsports-guidance">gabay para sa youth sports</a>.</p>
 <p>Bisitahin ang <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> para sa pinakabagong impormasyon at mga resource tungkol sa COVID-19 at mga paaralan.</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Sundin ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">gabay na ito para sa panlibangang sports para sa kabataan at mga nasa hustong gulang</a> indoors at outdoors. Magkakaroon ng bisa ang gabay na ito sa Pebrero 26, 2021. Ipinapakita nito kung aling mga sport ang pinapayagang maglaro sa kung aling mga tier, batay sa antas ng contact at panganib ng transmisyon ng COVID-19.</p>
+            <p>Sundin ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">gabay na ito para sa panlibangang sports para sa kabataan at mga nasa hustong gulang</a> indoors at outdoors. Ipinapakita nito kung aling mga sport ang pinapayagang maglaro sa kung aling mga tier, batay sa antas ng contact at panganib ng transmisyon ng COVID-19. Mayroon ding iyong mga limitasyon para sa mga kumpetisyon at tournament.</p>
 <p>Nalalapat ang gabay na ito sa lahat ng organized youth sports, kasama ang:</p>
 <ul><li>Mga programa sa paaralang K-12</li><li>Mga panlibangang programa na sinusuportahan ng komunidad</li><li>Mga pribadong club at paliga</li></ul>
 <p>Nalalapat din ang gabay na ito sa mga nasa hustong gulang na naglalaro ng mga panlibangang sports. Hindi ito nalalapat sa pangkolehiyo o propesyonal na sports. </p>
-<p>Simula noong Enero 25, 2021, puwede nang magpatuloy ang mga kumpetisyon para sailang sports.</p>
-<ul><li>Dapat ay dalawang team lang ang maglalaban sa mga kumpetisyon.</li><li>Hindi pinapayagan ang mga tournament sa labas ng estado.</li></ul>
-<p>Hanapin ang lahat ng detalye sa pinakabagong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">gabay para sa panlibang sports para sa kabataan at nasa hustong gulang</a>, kasama ang mga limitasyon para sa mga kumpetisyon. </p>
-<p>Inilabas din ng California Department of Public Health ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">mga tanong at sagot tungkol sa sports para sa kabataan at nasa hustong gulang</a>.</p>
+<p>Maghanap ng higit pang impormasyon sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">mga tanong at sagot tungkol sa mga youth sports</a> ng California Department of Public Health.</p>
+<p><strong>Mga Kumpetisyon</strong></p>
+<p>Puwede nang magpatuloy ang mga kumpetisyon para sa ilang sport. Dapat ay dalawang team lang ang maglalaban. Puwede lang sumali ang isang team sa isang laro sa isang araw. Hindi pinapayagan ang mga tournament sa labas ng estado. Puwedeng magkaroon ng mga kumpetisyon kapag ang parehong mga team ay nasa:</p>
+<ul><li>Iisang county at pinapahintulutan ang sport sa kasalukuyang tier ng county</li><li>Sa mga bordering county, at pinapahintulutan ang sport sa parehong kasalukuyang tier ng mga county</li></ul>
+<p>Pinapayagan ang maramihang team na kumpetisyon para sa mga sport kung saan ang mga indibidwal na competitor mula sa maraming team ay routine, gaya ng:</p>
+<ul><li>Track and field</li><li>Cross-country</li><li>Golf</li><li>Ski at snowboarding</li><li>Tennis</li><li>Swimming, diving, at surfing</li><li>Biking</li><li>Mga equestrian event</li></ul>
+<p>Ang kumpetisyon ay dapat pahintulutan ng lokal na departamento sa kalusugan kung saan isinasagawa ang event at ng bawat isang lokal na departamento sa kalusugan kung saan galing ang mga team.</p>
+<p>Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">gabay para sa mga panlibangang sport para sa kabataan at nasa hustong gulang</a> para sa mga kumpletong detalye.</p>
+<p><strong>Mga ipinag-aatas para sa mga team na sumusunod sa mga sport sa kolehiyo</strong></p>
+<p>Kung sinusunod ng isang team ang mas mahihigpit na ipinag-aatas kapalit ng mga team sa kolehiyo, puwede na silang bumalik sa kumpetisyon anumang oras para sa anumang sport, kasama ang indoors. Kasama sa mga ipinag-aatas na ito ang sumusunod:</p>
+<ul><li>Mahihigpit na ipinag-aatas sa pagsusuri para sa bawat kumpetisyon</li><li>Mga protocol sa contact tracing</li><li>Koordinasyon sa mga lokal na awtoridad sa kalusugan</li></ul>
+<p>Hanapin ang kumpletong detalye tungkol sa mga ipinag-aatas na ito sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">gabay para sa panlibang sports para sa kabataan at nasa hustong gulang</a>.</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
