--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;16 tháng 3, 2021 lúc 14:26</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 3, 2021 lúc 16:52</p>
           
         </div>
       </div>
@@ -2239,7 +2239,7 @@
 
 
 <div style="display:none;" class="js-qa js-qa-question">Tôi có thể tìm danh sách người lao động trong các ngành thiết yếu ở đâu?</div>
-<div style="display:none;" class="js-qa js-qa-answer">Xem <a href="/vi/essential-workforce/">danh sách lực lượng lao động trong các ngành thiết yếu</a>. </div>
+<div style="display:none;" class="js-qa js-qa-answer">Xem <a href="/vi/essential-workforce/">danh sách lực lượng lao động trong các ngành nghề thiết yếu</a>. </div>
 
 
 
@@ -2247,13 +2247,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Các trường học – cập nhật ngày 22 tháng 2 năm 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> Trường học – cập nhật ngày 20 tháng 3 năm 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>California đã cập nhật hướng dẫn và khuôn khổ mở cửa trở lại các trường từ mẫu giáo đến lớp 12 để học trên lớp trong năm học 2020-2021. Tìm hiểu thêm trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">khuôn khổ và hướng dẫn mở cửa trở lại các trường từ mẫu giáo đến lớp 12</a>. Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">các câu hỏi và giải đáp</a> về khuôn khổ và hướng dẫn mở cửa trở lại các trường từ mẫu giáo đến lớp 12.</p>
-<p> Các trường phải tuân thủ <a href="/vi/industry-guidance/#cohort-guidance">hướng dẫn liên quan đến các nhóm</a> trẻ em và thanh thiếu niên. Đối với các hoạt động thể thao dành cho thanh thiếu niên do nhà trường tài trợ, hãy tuân thủ <a title="hướng dẫn về các hoạt động thể thao dành cho thanh thiếu niên" href="/vi/industry-guidance/#youthsports-guidance">hướng dẫn về các hoạt động thể thao dành cho thanh thiếu niên</a>.</p>
+            <p>California đã cập nhật hướng dẫn và khuôn khổ mở cửa trở lại các trường học từ khối Mẫu Giáo đến Lớp 12 (Kindergarten to Grade 12, K-12) đối với hình thức học trên lớp trong năm học 2020-2021. Tìm hiểu thêm trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">khuôn khổ và hướng dẫn mở cửa trở lại các trường từ mẫu giáo đến lớp 12</a>. Xem mục <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">hỏi và đáp</a> về khuôn khổ và hướng dẫn mở cửa trở lại các trường học K-12.</p>
+<p>Đối với các hoạt động thể thao dành cho thanh thiếu niên do nhà trường tài trợ, hãy tuân thủ <a title="hướng dẫn về các hoạt động thể thao dành cho thanh thiếu niên" href="/vi/industry-guidance/#youthsports-guidance">hướng dẫn về các hoạt động thể thao dành cho thanh thiếu niên</a>.</p>
 <p>Hãy truy cập <a href="https://schools.covid19.ca.gov/">Trường Học An Toàn Cho Mọi Người</a> để biết thông tin và tài nguyên mới nhất về đại dịch COVID-19 và các trường học.</p>
 
                   </div>
@@ -2381,14 +2381,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Tuân thủ <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">hướng dẫn này đối với các hoạt động thể thao giải trí dành cho thanh thiếu niên và người lớn,</a> cả trong nhà và ngoài trời. Hướng dẫn này sẽ có hiệu lực vào ngày 26 tháng 2 năm 2021. Hướng dẫn này sẽ cho biết các môn thể thao nào được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền COVID-19.</p>
+            <p>Tuân thủ <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">hướng dẫn này đối với các hoạt động thể thao giải trí dành cho thanh thiếu niên và người lớn,</a> cả trong nhà và ngoài trời. Hướng dẫn này sẽ cho biết các môn thể thao nào được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền COVID-19. Trong đó cũng bao gồm các giới hạn đối với sự kiện thi đấu và giải đấu.</p>
 <p>Hướng dẫn này áp dụng cho tất cả các hoạt động thể thao có tổ chức dành cho thanh thiếu niên, bao gồm:</p>
 <ul><li>Các chương trình trong trường học từ mẫu giáo đến lớp 12</li><li>Các chương trình giải trí do cộng đồng tài trợ</li><li>Các câu lạc bộ và liên đoàn tư nhân</li></ul>
 <p>Hướng dẫn này cũng áp dụng cho các hoạt động thể thao giải trí của người lớn. Hướng dẫn này không áp dụng cho hoạt động thể thao sinh viên hay chuyên nghiệp. </p>
-<p>Kể từ ngày 25 tháng 1 năm 2021, có thể tiếp tục các cuộc thi đấu đối với một vài môn thể thao.</p>
-<ul><li>Chỉ được phép tổ chức thi đấu giữa hai đội.</li><li>Các giải đấu ngoài tiểu bang vẫn không được phép tổ chức.</li></ul>
-<p>Tìm tất cả các thông tin chi tiết trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">hướng dẫn cho hoạt động thể thao giải trí dành cho thanh thiếu niên và người lớn</a> mới nhất, bao gồm cả các giới hạn thi đấu. </p>
-<p>Sở Y Tế Công Cộng California cũng đã ban hành <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">các câu hỏi và giải đáp</a> về hoạt động thể thao dành cho thanh thiếu niên và người lớn.</p>
+<p>Tìm thêm thông tin trong mục <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">hỏi và đáp về hoạt động thể thao dành cho thanh thiếu niên</a> của Sở Y Tế Công Cộng California.</p>
+<p><strong>Thi đấu</strong></p>
+<p>Có thể cho phép thi đấu trở lại đối với một vài môn thể thao. Chỉ được phép tổ chức thi đấu giữa hai đội. Một đội chỉ có thể tham gia một trận đấu mỗi ngày. Các giải đấu ngoài tiểu bang vẫn không được phép tổ chức. Có thể tổ chức thi đấu khi cả hai đội:</p>
+<ul><li>Ở cùng một quận và môn thể thao đó được cho phép trong cấp hiện tại của quận đó</li><li>Ở các quận tiếp giáp và môn thể thao đó được cho phép trong cấp hiện tại của cả hai quận đó</li></ul>
+<p>Được phép cho thi đấu nhiều đội đối với các môn thể thao mà cá nhân đấu thủ từ nhiều đội thực hiện một chuỗi các động tác cố định, ví dụ như:</p>
+<ul><li>Điền kinh</li><li>Chạy băng đồng</li><li>Golf</li><li>Trượt tuyết và trượt ván trên tuyết</li><li>Quần vợt</li><li>Bơi lội, lặn và lướt sóng</li><li>Đua xe đạp</li><li>Các sự kiện cưỡi ngựa</li></ul>
+<p>Sở y tế địa phương nơi tổ chức sự kiện và mỗi sở y tế địa phương nơi các đội xuất phát phải cho phép tổ chức thi đấu.</p>
+<p>Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">hướng dẫn cho hoạt động thể thao giải trí dành cho thanh thiếu niên và người lớn</a> để biết đầy đủ thông tin chi tiết.</p>
+<p><strong>Các đội cần tuân thủ yêu cầu dành cho những môn thể thao sinh viên</strong></p>
+<p>Nếu một đội tuân thủ các yêu cầu khắt khe hơn dành cho các đội sinh viên thì có thể trở lại thi đấu tại bất kỳ thời điểm nào đối với bất kỳ môn thể thao nào, bao gồm cả trong nhà. Các yêu cầu này bao gồm:</p>
+<ul><li>Yêu cầu xét nghiệm khắt khe cho mỗi trận thi đấu</li><li>Quy trình theo dõi tiếp xúc</li><li>Phối hợp với các cơ quan y tế địa phương</li></ul>
+<p>Tìm các thông tin chi tiết đầy đủ về những yêu cầu này trong <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">hướng dẫn cho hoạt động thể thao giải trí dành cho thanh thiếu niên và người lớn</a>.</p>
 
                   </div>
                 </div>
@@ -2430,7 +2438,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
