--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>旨在降低风险的行业指引</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月16日, 下午2:26</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 下午4:52</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 学校 — 更新于2021年2月22日</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 学校 – 更新于2021年3月20日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>加州已更新2020至2021学年K-12学校重新开放面授教学的指引及规范。详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12学校重新开放的规范及指引</a>。查看有关K-12学校重新开放的规范及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">问题与解答</a>。</p>
-<p>学校亦须遵循儿童及青少年<a href="/zh-hans/industry-guidance/#cohort-guidance">群组相关指引</a>。学校赞助的青少年体育运动需遵循<a title="青少年体育运动指引" href="/zh-hans/industry-guidance/#youthsports-guidance">青少年体育运动指引</a>。</p>
+            <p>加州已更新2020至2021学年K-12学校重新开放面授教学的指引及规范。详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">K-12学校重新开放的规范及指引</a>。查看有关K-12学校重新开放的规范及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">问题与解答</a>。</p>
+<p>学校赞助的青少年体育运动需遵循<a title="青少年体育运动指引" href="/zh-hans/industry-guidance/#youthsports-guidance">青少年体育运动指引</a>。</p>
 <p>请浏览<a href="https://schools.covid19.ca.gov/">全民安全校园</a>，了解有关COVID-19和学校的最新信息及资源。</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>请遵循此<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休闲体育运动指引</a>（室内及户外）。 此指引于2021年2月26日生效。该指引基于接触程度和传播COVID-19的风险等级，说明了各个等级中允许恢复进行的运动项目。</p>
+            <p>请遵循此<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休闲体育运动指引</a>（室内及户外）。该指引基于接触程度和传播COVID-19的风险等级，说明了各个等级中允许恢复进行的运动项目。其中也包括对竞赛和锦标赛的限制。</p>
 <p>此指引适用于所有组织性青少年体育运动，包括：</p>
 <ul><li>K-12学校活动</li><li>社区主办的休闲娱乐活动</li><li>私人俱乐部和联盟</li></ul>
 <p>此指引亦适用于成人休闲体育运动。其不适用于大学或职业体育运动。 </p>
-<p>自2021年1月25日起，部分体育运动比赛可以重新开展。</p>
-<ul><li>一场比赛必须只能有两支队伍参加。</li><li>不允许在州外举办锦标赛。</li></ul>
-<p>完整细则请见最新的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休闲体育运动指引</a>，其中亦包括比赛限制。 </p>
-<p>加州公共卫生局还发布了有关青少年及成人体育运动的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">问题与解答</a></p>
+<p>详情请参阅加州公共卫生局<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">有关青少年体育运动的问题与解答</a>。</p>
+<p><strong>竞赛</strong></p>
+<p>可以恢复部分体育运动的竞赛。每场竞赛必须只能有两支队伍参加。同一团队每天只能参与一场竞赛。不允许在州外举办锦标赛。如果双方团队符合以下位置要求，则可以进行竞赛：</p>
+<ul><li>位于同一县并且该县当前的等级允许进行此类体育运动</li><li>位于相邻县并且两县当前的等级允许进行此类体育运动</li></ul>
+<p>如果体育运动按惯例是由来自多个团队的个人竞赛者参与，则允许进行该体育运动的多团队竞赛，例如：</p>
+<ul><li>田径</li><li>越野</li><li>高尔夫</li><li>滑雪和单板滑雪</li><li>网球</li><li>游泳、潜水和冲浪</li><li>骑行</li><li>马术比赛</li></ul>
+<p>竞赛举办地的地方卫生局和团队出发地的地方卫生局都必须批准此竞赛。</p>
+<p>完整详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休闲体育运动指引</a>。</p>
+<p><strong>遵守大学体育运动要求的团队</strong></p>
+<p>如果团队遵守针对大学团队的更严格要求，则该团队可以随时恢复任何体育运动的竞赛，包括室内竞赛。以下为针对大学团队的更严格要求：</p>
+<ul><li>对每场竞赛设定严格的测试要求</li><li>签订接触追踪协议</li><li>与地方卫生官方机构进行协调</li></ul>
+<p>上述要求的完整详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休闲体育运动指引</a>。</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
