--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>旨在降低風險的行業指引</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月16日, 下午2:26</p>
+            <p class="small-text">最近更新&nbsp;2021年3月23日, 下午4:52</p>
           
         </div>
       </div>
@@ -2237,7 +2237,7 @@
 
 
 <div style="display:none;" class="js-qa js-qa-question">在哪裡可以查看必要工作者清單？</div>
-<div style="display:none;" class="js-qa js-qa-answer">查看<a href="/zh-hant/essential-workforce/">必要工作者清單</a>。 </div>
+<div style="display:none;" class="js-qa js-qa-answer">請查看<a href="/zh-hant/essential-workforce/">必要工作者清單</a>。 </div>
 
 
 
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 學校 — 更新於2021年2月22日</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 學校 – 更新於2021年3月20日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>加州已更新2020至2021學年K-12學校重新開放面授教學的指引及規範。詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12學校重新開放的規範及指引</a>。查看有關K-12學校重新開放的規範及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">問題與解答</a>。</p>
-<p>學校亦須遵循兒童及青少年<a href="/zh-hant/industry-guidance/#cohort-guidance">群組相關指引</a>。學校贊助的青少年體育運動需遵循<a title="青少年體育運動指引" href="/zh-hant/industry-guidance/#youthsports-guidance">青少年體育運動指引</a>。</p>
+            <p>加州已更新2020至2021學年K-12學校重新開放面授教學的指引及規範。詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">K-12學校重新開放的規範及指引</a>。查看有關K-12學校重新開放的規範及指引的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">問題與解答</a>。</p>
+<p>學校贊助的青少年體育運動需遵循<a title="青少年體育運動指引" href="/zh-hant/industry-guidance/#youthsports-guidance">青少年體育運動指引</a>。</p>
 <p>請瀏覽<a href="https://schools.covid19.ca.gov/">全民安全校園</a>，了解有關COVID-19和學校的最新資訊及資源。</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>請遵循此<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休閒體育運動指引</a>（室內及戶外）。此指引於2021年2月26日生效。該指引基於接觸程度和傳播COVID-19的風險等級，說明了各個等級中允許恢復進行的運動項目。</p>
+            <p>請遵循此<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休閒體育運動指引</a>（室內及戶外）。該指引基於接觸程度和傳播COVID-19的風險等級，說明了各個等級中允許恢復進行的運動項目。其中也包括對競賽和錦標賽的限制。</p>
 <p>此指引適用於所有組織性青少年體育運動，包括：</p>
 <ul><li>K-12學校活動</li><li>社區主辦的休閒娛樂活動</li><li>私人俱樂部和聯盟</li></ul>
 <p>此指引亦適用於成人休閒體育運動。其不適用於大學或職業體育運動。 </p>
-<p>自2021年1月25日起，部分體育運動比賽可以重新開展。</p>
-<ul><li>一場比賽必須只能有兩支隊伍參加。</li><li>不允許在州外舉辦錦標賽。</li></ul>
-<p>完整細則請見最新的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休閒體育運動指引</a>，其中亦包括比賽限制。 </p>
-<p>加州公共衛生局還發佈了有關青少年及成人體育運動的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">問題與解答</a>。</p>
+<p>詳情請參閱加州公共衛生局<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">有關青少年體育運動的問題與解答</a>。</p>
+<p><strong>競賽</strong></p>
+<p>可以恢復部分體育運動的競賽。每場競賽必須只能有兩支隊伍參加。同一團隊每天只能參加一場競賽。不允許在州外舉辦錦標賽。如果雙方團隊符合以下位置要求，則可以進行競賽：</p>
+<ul><li>位於同一縣並且該縣當前的等級允許進行此類體育運動</li><li>位於相鄰縣並且兩縣當前的等級允許進行此類體育運動</li></ul>
+<p>如果體育運動按慣例是由來自多個團隊的個人競賽者參與，則允許進行該體育運動的多團隊競賽，例如：</p>
+<ul><li>田徑</li><li>越野</li><li>高爾夫</li><li>滑雪和單板滑雪</li><li>網球</li><li>游泳，潛水和衝浪</li><li>騎行</li><li>馬術比賽</li></ul>
+<p>競賽舉辦地的地方衛生局和團隊出發地的地方衛生局都必須批准此競賽。</p>
+<p>完整詳情請見<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休閒體育運動指引</a>。</p>
+<p><strong>遵守大學體育運動要求的團隊</strong></p>
+<p>如果團隊遵守針對大學團隊的更嚴格要求，則該團隊可以隨時恢復任何體育運動的競賽，包括室內競賽。以下為針對大學團隊的更嚴格要求：</p>
+<ul><li>對每場競賽設定嚴格的測試要求</li><li>簽訂接觸追踪協議</li><li>與地方衛生官方機構進行協調</li></ul>
+<p>上述要求的完整詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">青少年及成人休閒體育運動指引</a>。</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
