--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الصناعية لخفض المخاطر</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:26 م الساعة 16 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:52 م الساعة 23 مارس 2021</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> المدارس - تم تحديثها في 22 فبراير 2021</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> المدارس - حُدثت في 20 مارس 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>قامت كاليفورنيا بتحديث التوجيهات وإطار العمل لإعادة فتح المدارس من الحضانة وحتى الصف 12 للتعلم بالحضور الشخصي للعام الدراسي 2020-2021. تعرف على المزيد في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات وإطار عمل إعادة فتح المدارس من رياض الأطفال وحتى الصف الثاني عشر (K-12)</a>. راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">الأسئلة والأجوبة</a> حول توجيهات وإطار عمل إعادة فتح مدارس من الحضانة وحتى الصف 12.</p>
-<p> يجب على المدارس اتباع <a href="/ar/industry-guidance/#cohort-guidance">الإرشادات المتعلقة بفِرق</a> الأطفال والشباب. بالنسبة للرياضات الشبابية التي ترعاها المدرسة، اتبع <a title="التوجيهات الخاصة بالرياضات الشبابية" href="/ar/industry-guidance/#youthsports-guidance">التوجيهات الخاصة بالرياضات الشبابية</a>.</p>
+            <p>قامت كاليفورنيا بتحديث التوجيهات وإطار العمل لإعادة فتح المدارس من الحضانة وحتى الصف 12 للتعلم بالحضور الشخصي للعام الدراسي 2020-2021. تعرف على المزيد في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">التوجيهات وإطار عمل إعادة فتح المدارس من رياض الأطفال وحتى الصف الثاني عشر (K-12)</a>. راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">الأسئلة والأجوبة</a> حول توجيهات وإطار عمل إعادة فتح مدارس من الحضانة وحتى الصف 12.</p>
+<p>بالنسبة للرياضات الشبابية التي ترعاها المدرسة، اتبع <a title="التوجيهات الخاصة بالرياضات الشبابية" href="/ar/industry-guidance/#youthsports-guidance">التوجيهات الخاصة بالرياضات الشبابية</a>.</p>
 <p>قم بزيارة <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> للحصول على أحدث المعلومات والموارد حول كوفيد-19 والمدارس.</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>اتبع هذه <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">الإرشادات الخاصة بالرياضات الترفيهية للشباب والبالغين،</a> في كل من الأماكن المغلقة والمفتوحة. وتدخل هذه الإرشادات حيز التنفيذ في 26 فبراير 2021. وهي تُبين أي الرياضات التي سُمِح لها بالعودة للعب وفي أي فئة، استنادا إلى مستوى الاتصال وخطر انتقال فيروس كوفيد-19.</p>
+            <p>اتبع هذه <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">الإرشادات الخاصة بالرياضات الترفيهية للشباب والبالغين،</a> في كل من الأماكن المغلقة والمفتوحة. وهي تُبين أي الرياضات التي سُمِح لها بالعودة للعب وفي أي فئة، استنادا إلى مستوى الاتصال وخطر انتقال فيروس كوفيد-19. وتشمل أيضًا قيودًا على المسابقات والبطولات.</p>
 <p>وتنطبق هذه الإرشادات على جميع الرياضات الشبابية المنظمة، بما في ذلك:</p>
 <ul><li>البرامج المدرسية من الحضانة وحتى الصف 12</li><li>البرامج الترفيهية التي ترعاها المجتمعات المحلية</li><li>النوادي والدوريات الخاصة</li></ul>
 <p>تنطبق هذه الإرشادات أيضًا على البالغين الذين يمارسون الرياضات الترفيهية. ولا تُطبق هذه الإرشادات على الألعاب الرياضية المهنية أو الجامعية. </p>
-<p>اعتبارًا من 25 يناير 2021، قد تُستأنف المباريات لبعض الألعاب الرياضية.</p>
-<ul><li>يجب أن تكون المباريات بين فريقين فقط.</li><li>لا يُسمح بالبطولات خارج الولاية.</li></ul>
-<p>اعثر على كل التفاصيل في أحدث <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">الإرشادات الخاصة بالرياضات الترفيهية للشباب والبالغين</a>، بما في ذلك القيود المفروضة على المسابقات. </p>
-<p>وقد أصدرت أيضًا إدارة الصحة العامة بولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">أسئلة وأجوبة حول رياضات الشباب والبالغين</a>.</p>
+<p>اعثر على المزيد من المعلومات في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">أسئلة وأجوبة حول رياضات الشباب</a> بموقع إدارة الصحة العامة بولاية كاليفورنيا.</p>
+<p><strong>المباريات/المسابقات</strong></p>
+<p>يمكن استئناف مسابقات بعض الألعاب الرياضية. يجب أن تكون المباريات بين فريقين فقط. أي فريق يُمْكِنُ أَنْ يَشتركَ في مباراة واحدة فقط في اليوم. لا يُسمح بالبطولات خارج الولاية. يمكن أن تُقام المسابقات عندما يتم تحديد مكان كلا الفريقين:</p>
+<ul><li>في نفس المقاطعة والرياضة مسموح بها في الفئة الحالية للمقاطعة</li><li>في المقاطعات المتجاورة والرياضة مسموح بها في الفئات الحالية لكلتا المقاطعتين</li></ul>
+<p>يسمح بالتنافس بين فرق متعددة في الألعاب الرياضية حيث يكون الأفراد المتنافسين من فرق متعددة أمرًا روتينيًا، مثل:</p>
+<ul><li>سباقات المضمار والميدان</li><li>اختراق الضاحية</li><li>الجولف</li><li>التزلج والتزحلق على الجليد</li><li>التنس</li><li>السباحة والغطس وركوب الأمواج</li><li>ركوب الدراجات</li><li>مسابقات الفروسية</li></ul>
+<p>ويجب على الإدارة الصحية المحلية التي تعقد فيها فعاليات هذه المسابقة وعلى كل الإدارات الصحية المحلية التي تسافر منها الفرق أن يأذنوا جميعا بإقامة هذه الفعالية الرياضية.</p>
+<p>راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">الإرشادات الخاصة بالرياضات الترفيهية للشباب والبالغين</a>للحصول على تفاصيل كاملة.</p>
+<p><strong>الفرق التي تتبع متطلبات الرياضة الجامعية</strong></p>
+<p>وإذا ما اتبع الفريق الشروط الأكثر صرامة فيما يخص الفرق الجامعية، فيمكنه العودة إلى المنافسة في أي وقت من الأوقات على أي رياضة، بما في ذلك الألعاب التي تقام في الأماكن المغلقة. وتشمل هذه الشروط المطلوبة ما يلي:</p>
+<ul><li>شروط اختبار صارمة لكل مسابقة</li><li>بروتوكولات تتبع المخالطين</li><li>التنسيق مع الهيئات الصحية المحلية</li></ul>
+<p>اعثر على تفاصيل كاملة حول هذه الشروط المطلوبة في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">الإرشادات الخاصة بالرياضات الترفيهية للشباب والبالغين</a>.</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
