--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험 감소를 위한 업계 지침</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 16일 오후 2:26</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오후 4:52</p>
           
         </div>
       </div>
@@ -2245,13 +2245,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 학교 – 2021년 2월 22일 업데이트</h4>
+            <h4 id="schools-guidance"><span class="ca-gov-icon-reader"></span> 학교 – 2021년 3월 20일 업데이트</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>캘리포니아는 2020-2021 학년도 유치원 및 초중고교 대상의 대면 수업 재개에 대한 지침 및 체계를 업데이트하였습니다. 더 자세한 사항은 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 학교 수업 재개 관련 체계 및 지침</a>에서 확인하십시오. K-12 학교 수업 재개 관련 체계 및 지침에 관한 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">질문과 답변</a>을 확인하십시오.</p>
-<p> 학교는 유아 및 청소년 <a href="/ko/industry-guidance/#cohort-guidance">집단 관련 지침</a>을 준수해야 합니다. 학교가 후원하는 유소년 스포츠의 경우 <a title="유소년 스포츠에 대한 지침" href="/ko/industry-guidance/#youthsports-guidance">청소년 스포츠에 대한 지침</a>을 준수하십시오.</p>
+            <p>캘리포니아는 2020-2021 학년도 유치원 및 초중고교 대상의 대면 수업 재개에 대한 지침 및 체계를 업데이트하였습니다. 더 자세한 사항은 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19-K12-Schools-InPerson-Instruction.aspx">K-12 학교 수업 재개 관련 체계 및 지침</a>에서 확인하십시오. 유치원과 초중고교 수업 재개 관련 체계 및 지침에 관한 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">질문과 답변</a>을 확인하십시오.</p>
+<p>학교가 후원하는 유소년 스포츠의 경우 <a title="유소년 스포츠에 대한 지침" href="/ko/industry-guidance/#youthsports-guidance">청소년 스포츠에 대한 지침</a>을 준수하십시오.</p>
 <p>COVID-19와 학교에 관한 최신 정보와 자원을 확인하려면 <a href="https://schools.covid19.ca.gov/">모두에게 안전한 학교(Safe Schools for All)</a>를 방문하십시오.</p>
 
                   </div>
@@ -2379,14 +2379,22 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>실내 및 실외에서 모두 본 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>을 준수하십시오. 본 지침은 2021년 2월 26일 자로 시행됩니다. 이를 통해 COVID-19 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>
+            <p>실내 및 실외에서 모두 본 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>을 준수하십시오.이를 통해 COVID-19 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠에 대해 운동 복귀가 허용되는지를 확인할 수 있습니다. 또한 시합 및 토너먼트에 대한 제한 사항도 여기에 포함되어 있습니다.</p>
 <p>이 지침은 다음을 포함하여 모든 청소년 단체 스포츠에 적용됩니다:</p>
 <ul><li>K-12 학교 프로그램</li><li>지역사회 후원 레크리에이션 프로그램</li><li>사설 스포츠 클럽 및 단체</li></ul>
 <p>이 지침은 성인 오락용 레크리에이션 스포츠에도 적용됩니다. 대학이나 프로 스포츠는 이 지침의 적용 대상이 아닙니다. </p>
-<p>2021년 1월 25일 현재 일부 스포츠 시합을 재개할 수 있습니다.</p>
-<ul><li>시합은 두 팀에 한해 진행해야 합니다.</li><li>타주에서 하는 시합은 허용되지 않습니다.</li></ul>
-<p>전체 세부 사항은 시합에 대한 제한 사항을 포함하는 최신 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>에서 확인하십시오. </p>
-<p>또한 캘리포니아 공공보건부가 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">청소년 및 성년 스포츠에 대한 질문과 응답</a>을 발표하였습니다.</p>
+<p>더 자세한 사항은 캘리포니아 공공보건부의 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Youth-Sports-FAQ.aspx">청소년 스포츠에 대한 질문과 응답</a>에서 확인하십시오.</p>
+<p><strong>시합</strong></p>
+<p>일부 스포츠는 시합을 재개할 수 있습니다. 시합은 두 팀에 한해 진행해야 합니다. 한 팀은 하루에 한 시합에 한해 출전할 수 있습니다. 타주에서 하는 시합은 허용되지 않습니다. 시합은 두 팀의 소재지가 모두 다음에 해당할 경우 진행할 수 있습니다:</p>
+<ul><li>동일한 카운티에 있으며 해당 카운티가 현 단계에서 스포츠 허용</li><li>인접한 카운티에 있으며 두 카운티 모두 현 단계에서 스포츠 허용</li></ul>
+<p>복수팀에서 개별 선수 출전이 일반적인 다음 스포츠의 경우 복수팀 시합이 허용됩니다:</p>
+<ul><li>육상 경기</li><li>크로스 컨트리</li><li>골프</li><li>스키와 스노우보딩</li><li>테니스</li><li>수영, 다이빙 및 서핑</li><li>자전거 타기</li><li>승마 종목</li></ul>
+<p>종목 시합이 열리게 될 곳의 지역 보건부 및 팀 출발지 별 지역 보건부가 시합에 대해 승인해야 합니다.</p>
+<p>전체 세부 내용은 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>에서 확인하십시오.</p>
+<p><strong>팀이 대학 스포츠 요건을 준수하는 경우</strong></p>
+<p>팀이 대학 팀에 대해 적용하는 더 엄격한 요건을 준수하는 경우 언제라도 실내를 포함하여 모든 스포츠 시합에 복귀할 수 있습니다. 해당 요건은 다음과 같습니다:</p>
+<ul><li>시합 별로 엄격한 검사 요건</li><li>접촉자 추적 규약</li><li>지역 보건 당국과 협조</li></ul>
+<p>본 요건에 관한 전체 세부 내용은 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx">청소년 및 성인 레크리에이션 스포츠에 대한 지침</a>에서 확인하십시오.</p>
 
                   </div>
                 </div>
@@ -2428,7 +2436,35 @@
 
 
 
-<p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
     </div>
   </div>
