Update translation - 105060712 (#3867) 861fe2a8ef0c08b1349e8032b45167d2aea2ec60

--- a/ko/guide-immigrant-californians/index.html
+++ b/ko/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>이민자를 위한 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 23일 오전 11:44</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 24일 오후 2:15</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용은 다음과 같습니다:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">검사 및 치료</a></strong></li><li><strong><a href="#know-your-rights">자신의 권리를 확인하십시오</a></strong></li><li><strong><a href="#housing-help">주거 지원</a></strong></li><li><strong><a href="#guide">캘리포니아주 이민자를 위한 안내</a></strong></li><li><strong><a href="#tax-credits">세액 공제</a></strong></li><li><strong><a href="#questions">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">검사 및 치료</a></strong></li><li><strong><a href="#know-your-rights">자신의 권리를 확인하십시오</a></strong></li><li><strong><a href="#housing-help">주거 지원</a></strong></li><li><strong><a href="#guide">캘리포니아주 이민자를 위한 안내</a></strong></li><li><strong><a href="#tax-credits">세액 공제</a></strong></li><li><strong><a href="#questions">질문 및 답변</a></strong></li></ul>
 
 
 
