--- a/ar/guide-immigrant-californians/index.html
+++ b/ar/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة المهاجرين</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:44 ص الساعة 23 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:15 م الساعة 24 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>ستجد في هذه الصفحة ما يلي:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">إجراء الفحوصات والعلاج</a></strong></li><li><strong><a href="#know-your-rights">اعرف حقوقك</a></strong></li><li><strong><a href="#housing-help">المساعدة في الحصول على السكن</a></strong></li><li><strong><a href="#guide">دليل سكان كاليفورنيا المهاجرين</a></strong></li><li><strong><a href="#tax-credits">الائتمانات الضريبية</a></strong></li><li><strong><a href="#questions">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">إجراء الفحوصات والعلاج</a></strong></li><li><strong><a href="#know-your-rights">اعرف حقوقك</a></strong></li><li><strong><a href="#housing-help">المساعدة في الحصول على السكن</a></strong></li><li><strong><a href="#guide">دليل سكان كاليفورنيا المهاجرين</a></strong></li><li><strong><a href="#tax-credits">الائتمانات الضريبية</a></strong></li><li><strong><a href="#questions">أسئلة وإجابات</a></strong></li></ul>
 
 
 
