--- a/es/guide-immigrant-californians/index.html
+++ b/es/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ayuda para inmigrantes</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de marzo de 2021 a las 11:44 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de marzo de 2021 a las 2:15 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">Pruebas y tratamiento</a></strong></li><li><strong><a href="#know-your-rights">Conozca sus derechos</a></strong></li><li><strong><a href="#housing-help">Ayuda de vivienda</a></strong></li><li><strong><a href="#guide">Guía para los californianos inmigrantes</a></strong></li><li><strong><a href="#tax-credits">Créditos fiscales</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">Pruebas y tratamiento</a></strong></li><li><strong><a href="#know-your-rights">Conozca sus derechos</a></strong></li><li><strong><a href="#housing-help">Ayuda de vivienda</a></strong></li><li><strong><a href="#guide">Guía para los californianos inmigrantes</a></strong></li><li><strong><a href="#tax-credits">Créditos fiscales</a></strong></li><li><strong><a href="#questions">Preguntas y respuestas</a></strong></li></ul>
 
 
 
