--- a/tl/guide-immigrant-californians/index.html
+++ b/tl/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga immigrant</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 23, 2021 sa 11:44 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 24, 2021 sa 2:15 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito, makikita mo ang sumusunod:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">Pagsusuri at paggamot</a></strong></li><li><strong><a href="#know-your-rights">Alamin ang iyong mga karapatan</a></strong></li><li><strong><a href="#housing-help">Tulong sa pabahay</a></strong></li><li><strong><a href="#guide">Gabay para sa Mga Immigrant na Californian</a></strong></li><li><strong><a href="#tax-credits">Mga Credit sa Buwis</a></strong></li><li><strong><a href="#questions">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">Pagsusuri at paggamot</a></strong></li><li><strong><a href="#know-your-rights">Alamin ang iyong mga karapatan</a></strong></li><li><strong><a href="#housing-help">Tulong sa pabahay</a></strong></li><li><strong><a href="#guide">Gabay para sa Mga Immigrant na Californian</a></strong></li><li><strong><a href="#tax-credits">Mga Credit sa Buwis</a></strong></li><li><strong><a href="#questions">Mga tanong at sagot</a></strong></li></ul>
 
 
 
