--- a/zh-hans/guide-immigrant-californians/index.html
+++ b/zh-hans/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为移民提供的援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月23日, 上午11:44</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月24日, 下午2:15</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>您将在本页面中了解以下内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">检测与治疗</a></strong></li><li><strong><a href="#know-your-rights">了解您的权利</a></strong></li><li><strong><a href="#housing-help">住房援助</a></strong></li><li><strong><a href="#guide">加州移民指引</a></strong></li><li><strong><a href="#tax-credits">税收抵免</a></strong></li><li><strong><a href="#questions">问题与解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">检测与治疗</a></strong></li><li><strong><a href="#know-your-rights">了解您的权利</a></strong></li><li><strong><a href="#housing-help">住房援助</a></strong></li><li><strong><a href="#guide">加州移民指引</a></strong></li><li><strong><a href="#tax-credits">税收抵免</a></strong></li><li><strong><a href="#questions">问题与解答</a></strong></li></ul>
 
 
 
