--- a/zh-hant/guide-immigrant-californians/index.html
+++ b/zh-hant/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為移民提供的援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月23日, 上午11:44</p>
+            <p class="small-text">最近更新&nbsp;2021年3月24日, 下午2:15</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>您將在本頁面中了解以下內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><strong><a href="#testing-treatment">檢測與治療</a></strong></li><li><strong><a href="#know-your-rights">了解您的權利</a></strong></li><li><strong><a href="#housing-help">住房援助</a></strong></li><li><strong><a href="#guide">加州移民指南</a></strong></li><li><strong><a href="#tax-credits">稅收抵免</a></strong></li><li><strong><a href="#questions">問題與解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#testing-treatment">檢測與治療</a></strong></li><li><strong><a href="#know-your-rights">了解您的權利</a></strong></li><li><strong><a href="#housing-help">住房援助</a></strong></li><li><strong><a href="#guide">加州移民指南</a></strong></li><li><strong><a href="#tax-credits">稅收抵免</a></strong></li><li><strong><a href="#questions">問題與解答</a></strong></li></ul>
 
 
 
