Update page - new.html

--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,5 +1,5 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3">Vaccinations opening for all Californians aged 50 and up April 1, and 16 and up April 15</h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3">Vaccinations opening for all Californians aged 50 and up April 1st, and 16 and up April 15th</h2>
 
 
 
