--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月25日, 上午11:48</p>
+            <p class="small-text">最近更新&nbsp;2021年3月25日, 下午12:58</p>
           
         </div>
       </div>
